k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epouvante-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: epouvante-api
  template:
    metadata:
      labels:
        app: epouvante-api
    spec:
      containers:
      - name: api-container
        image: epouvante-api:v4
        imagePullPolicy: Never
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: epouvante-api-service
spec:
  selector:
    app: epouvante-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
  type: ClusterIP
