k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-laravel
spec:
  replicas: 2 # Haute disponibilité : 2 instances tournent en parallèle
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
      - name: laravel
        image: backend-laravel:latest # L'image que nous allons construire
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
spec:
  selector:
    app: laravel
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
  type: NodePort
