k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epouvante-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: epouvante-front
  template:
    metadata:
      labels:
        app: epouvante-front
    spec:
      containers:
      - name: front-container
        image: epouvante-front:v6
        imagePullPolicy: Never # Très important pour Minikube !
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: epouvante-front-service
spec:
  selector:
    app: epouvante-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP # Permet d'ouvrir l'accès sur Minikube
